--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,34 +1,32 @@
 <div class="container"
 fxLayout="column"
 fxLayoutGap="10px">
-
+   <h1 class="alert alert-warning text-center"*ngIf="!userLogger" >Bem vindo a nossa loja, faça login para ver detalhes dos livros!</h1>
     <div fxFlex>
         <div>
-          <i class="fa-sharp fa-solid fa-books"></i>
-            <h2>Os lançamentos mais vendidos</h2>
+            <h3>Os lançamentos mais vendidos</h3>
             <hr>
         </div>
     </div>
     <div fxFlex *ngIf="livro" >
-        <mat-grid-list cols="3" class="card" rowHeight="450px">
-            <mat-grid-tile *ngFor="let lv of livro" >
+        <mat-grid-list cols="3" rowHeight="450px">
+            <mat-grid-tile *ngFor="let lv of livro" [routerLink]="['bookdetail/',lv.id]">
               <mat-card>
                 <mat-card-header>
-                  <mat-card-title><h1>{{ lv.title }}</h1></mat-card-title>
+                  <mat-card-title>{{ lv.title }}</mat-card-title>
                   <mat-card-subtitle>{{lv.author}}</mat-card-subtitle>
                 </mat-card-header>
                   <img height="200px" src={{lv.img}} alt="{{ lv.title }}">
-                  <mat-card-content>
-                    <p matLine>
-                      Lorem ipsum
-                    </p>
-                  </mat-card-content>
-                  <mat-card-actions align="end">
-                    <button type="button" class="btn btn-warning">Warning</button>
-                    <button type="button" class="btn btn-dark">Dark</button>
+
+                  <mat-card-actions align="end" *ngIf="userLogger">
+                    <button type="button" class="btn btn-warning">Já li</button>
+                    <a type="button" class="btn btn-dark" [routerLink]="['/bookdetail', lv.id]" >Quero ler</a>
                   </mat-card-actions>
                     </mat-card>
             </mat-grid-tile>
         </mat-grid-list>
     </div>
 </div>
+
+
+
