--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,16 +6,18 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 text-white"><i class="fa-regular fa-books">Estante de Livros</i></a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
+        <li class="nav-item">
+          <a class="nav-link"  routerLinkActive="active" [routerLink]="['ranking']" *ngIf="userLogger"><i class="bi bi-trophy"></i>Ranking</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  routerLinkActive="active" [routerLink]="['profile']" *ngIf="userLogger"><i class="bi bi-trophy"></i>My Profile</a>
+        </li>
       </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
-      </form>
-
       <div class="text-end">
-        <button type="button" class="btn btn-outline-light me-2">Login</button>
-        <button type="button" class="btn btn-warning">Sign-up</button>
+        <button type="button" class="btn btn-warning me-2" *ngIf="!userLogger"(click)="openDialog()">Login</button>
+        <button type="button" class="btn btn-warning" *ngIf="userLogger">Logout</button>
       </div>
     </div>
   </div>
