--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,18 +1,19 @@
-<div class="container align-items-start">
-  <mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title><h2 matLine>My profile</h2></mat-card-title>
-    <h2>
-      <p matLine>{{user.name}}</p>
-    </h2>
-      <mat-card-subtitle>{{user.pontos}}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>This card indeterminates progress bar.</p>
-
-    </mat-card-content>
-    <mat-card-actions>
-
-    </mat-card-actions>
-  </mat-card>
+<div class="container">
+  <div class="card">
+    <h2 class="card-header">Leitor</h2>
+    <div class="card-body">
+      <h5 class="card-title">Nome: {{ user.name }}</h5>
+      <h5 class="card-title">Pontuação: {{ user.pontos }}</h5>
+    </div>
+    <div *ngIf="user.trofeus">
+      <mat-card>
+        <mat-card-header >
+          <mat-card-title>Troféu</mat-card-title>
+        </mat-card-header>
+        <mat-card-content><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="gold" class="bi bi-trophy-fill" viewBox="0 0 16 16">
+          <path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935z"/>
+        </svg> <span> {{ user.trofeus}}</span> </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </div>
