--- a/src/app/components/book-detail/book-detail.component.css
+++ b/src/app/components/book-detail/book-detail.component.css
@@ -1,3 +1,35 @@
-.img-book {
-  text-align: center;
+.example-card {
+  max-width: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+h3,
+h4 {
+  color: rgb(88, 85, 85);
+  line-height: 10px;
+}
+h1 {
+  font-weight: bold;
+}
+img {
+  width: 100%;
+  height: 520px;
+}
+.card-title {
+  font-weight: 500;
+}
+.btn-dark {
+  background-color: #daa804;
 }
