--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,24 +1,36 @@
-<header class="p-3 text-bg-dark">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-      </a>
-
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
-        <li class="nav-item">
-          <a class="nav-link"  routerLinkActive="active" [routerLink]="['ranking']" *ngIf="userLogger"><i class="bi bi-trophy"></i>Ranking</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"  routerLinkActive="active" [routerLink]="['profile']" *ngIf="userLogger"><i class="bi bi-trophy"></i>My Profile</a>
-        </li>
-      </ul>
-
-      <div class="text-end">
-        <button type="button" class="btn btn-warning me-2" *ngIf="!userLogger"(click)="openDialog()">Login</button>
-        <button type="button" class="btn btn-warning" *ngIf="userLogger">Logout</button>
-      </div>
-    </div>
+<nav>
+  <div class="nav-wrapper grey darken-4">
+    <a class="brand-logo right">
+      <button
+        type="button"
+        class="btn amber"
+        *ngIf="!userLogger"
+        (click)="openDialog()"
+      >
+        Entrar
+      </button>
+      <button type="button" class="btn amber" *ngIf="userLogger">
+        Sair
+      </button></a
+    >
+    <ul id="nav-mobile" class="left hide-on-med-and-down">
+      <li><a href="#" class="nav-link waves-effect px-2 text-white">Home</a></li>
+      <li>
+        <a
+          routerLinkActive="active"
+          [routerLink]="['ranking']"
+          *ngIf="userLogger"
+          >Ranking</a
+        >
+      </li>
+      <li>
+        <a
+          routerLinkActive="active"
+          [routerLink]="['profile']"
+          *ngIf="userLogger"
+          >Profile</a
+        >
+      </li>
+    </ul>
   </div>
-</header>
+</nav>
