--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -10,20 +10,30 @@
 .text-black {
   color: rgb(68, 67, 67)!important;
   text-align: center;
-  font-size: 10px;
+  font-size: 14px;
 }
 svg{
   color: #b8b4b4;
 }
 .text-yellow {
   color: #daa804;
-  font-size: 10px;
+  font-size: 14px;
   letter-spacing: 0.5px;
  text-decoration: none;
  font-weight: 100;
+}
+.btn-light {
+  background-color: #f4f4f2;
+  color: black;
+}
+.btn-warning {
+  background-color: #daa804;
+  color: black;
 }
 .form-label{
   letter-spacing: 0.32px;
   font-size: 10px;
 }
-
+h2 {
+  font-size: 30px;
+}
